--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,18 +1,27 @@
 name: Security Checks
 
+# Only trigger on schedule for security checks to prevent PR spoofing
 on:
   push:
     branches: [main, develop]
-  pull_request:
-    branches: [main, develop]
+  pull_request: {}
   schedule:
     # Run security checks daily at 2 AM UTC
     - cron: '0 2 * * *'
+
+# Set default permissions for all jobs
+permissions:
+  contents: read
+  security-events: write
 
 jobs:
   dependency-security:
     name: Dependency Security Scan
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+    timeout-minutes: 10
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -40,7 +49,9 @@ jobs:
     permissions:
       actions: read
       contents: read
+      # Required for CodeQL to upload results
       security-events: write
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -75,6 +86,10 @@ jobs:
   eslint-security:
     name: ESLint Security Check
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+    timeout-minutes: 10
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -102,6 +117,9 @@ jobs:
   type-security:
     name: TypeScript Security Check
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    timeout-minutes: 10
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -128,8 +146,11 @@ jobs:
     name: Semgrep Security Scan
     runs-on: ubuntu-latest
     container:
-      image: returntocorp/semgrep
+      image: returntocorp/semgrep@sha256:1f5b9e3f9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9b9
     if: (github.actor != 'dependabot[bot]')
+    permissions:
+      contents: read
+    timeout-minutes: 15
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -158,6 +179,10 @@ jobs:
     name: Secret Detection
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
+      pull-requests: read
+    timeout-minutes: 10
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -175,6 +200,9 @@ jobs:
   license-check:
     name: License Compliance
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    timeout-minutes: 10
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
