--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-security": "^3.0.1",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "next-themes": "^0.3.0",
@@ -68,6 +70,8 @@
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.3",
     "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.1",
     "postcss": "^8",
