--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    
-    
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "next-themes": "^0.3.0",
@@ -67,6 +65,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.3",
     "eslint-plugin-next": "^0.0.0",
@@ -74,10 +73,10 @@
     "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.1",
-    "postcss": "^8",
+    "postcss": "^8.5.5",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   },
   "lint-staged": {
