--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
+    "isomorphic-dompurify": "^2.25.0",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "next-themes": "^0.3.0",
