--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/sanitize-html": "^2.16.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
-    "isomorphic-dompurify": "^2.25.0",
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "next-themes": "^0.3.0",
@@ -55,6 +55,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "sanitize-html": "^2.17.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -73,6 +74,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.7",
+    "license-checker": "^25.0.1",
     "lint-staged": "^16.1.1",
     "postcss": "^8.5.5",
     "prettier": "^3.5.3",
