--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@types/css-tree": "^2.3.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
